; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/pci/extr_pci_iov_schema.c_pci_iov_schema_validate_types.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/pci/extr_pci_iov_schema.c_pci_iov_schema_validate_types.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @pci_iov_schema_validate_types to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pci_iov_schema_validate_types(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i8* null, i8** %7, align 8
  br label %11

11:                                               ; preds = %34, %2
  %12 = load i32*, i32** %5, align 8
  %13 = call i8* @nvlist_next(i32* %12, i32* %9, i8** %7)
  store i8* %13, i8** %8, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %15, label %35

15:                                               ; preds = %11
  %16 = load i32*, i32** %4, align 8
  %17 = load i8*, i8** %8, align 8
  %18 = call i32 @nvlist_exists_nvlist(i32* %16, i8* %17)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %22, label %20

20:                                               ; preds = %15
  %21 = load i32, i32* @EINVAL, align 4
  store i32 %21, i32* %3, align 4
  br label %36

22:                                               ; preds = %15
  %23 = load i32*, i32** %4, align 8
  %24 = load i8*, i8** %8, align 8
  %25 = call i32* @nvlist_get_nvlist(i32* %23, i8* %24)
  store i32* %25, i32** %6, align 8
  %26 = load i32*, i32** %6, align 8
  %27 = load i8*, i8** %8, align 8
  %28 = load i32*, i32** %5, align 8
  %29 = call i32 @pci_iov_schema_validate_param(i32* %26, i8* %27, i32* %28)
  store i32 %29, i32* %10, align 4
  %30 = load i32, i32* %10, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %22
  %33 = load i32, i32* %10, align 4
  store i32 %33, i32* %3, align 4
  br label %36

34:                                               ; preds = %22
  br label %11

35:                                               ; preds = %11
  store i32 0, i32* %3, align 4
  br label %36

36:                                               ; preds = %35, %32, %20
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local i8* @nvlist_next(i32*, i32*, i8**) #1

declare dso_local i32 @nvlist_exists_nvlist(i32*, i8*) #1

declare dso_local i32* @nvlist_get_nvlist(i32*, i8*) #1

declare dso_local i32 @pci_iov_schema_validate_param(i32*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
